Create domain orders with app
ng g @angular-architects/ddd:domain orders --addApp

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,10 @@
               {
                 "sourceTag": "*",
                 "onlyDependOnLibsWithTags": ["*"]
+              },
+              {
+                "sourceTag": "domain:orders",
+                "onlyDependOnLibsWithTags": ["domain:orders", "domain:shared"]
               }
             ]
           }
