--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,9 @@
   "version": 2,
   "projects": {
     "app1": "apps/app1",
-    "app1-e2e": "apps/app1-e2e"
+    "app1-e2e": "apps/app1-e2e",
+    "orders": "apps/orders",
+    "orders-domain": "libs/orders/domain",
+    "orders-e2e": "apps/orders-e2e"
   }
 }
