add invoices domain (with ngrx)
ng g @angular-architects/ddd:domain invoices --addApp --ngrx

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,10 @@
               {
                 "sourceTag": "domain:orders",
                 "onlyDependOnLibsWithTags": ["domain:orders", "domain:shared"]
+              },
+              {
+                "sourceTag": "domain:invoices",
+                "onlyDependOnLibsWithTags": ["domain:invoices", "domain:shared"]
               }
             ]
           }
