--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,9 @@
   "projects": {
     "app1": "apps/app1",
     "app1-e2e": "apps/app1-e2e",
+    "invoices": "apps/invoices",
+    "invoices-domain": "libs/invoices/domain",
+    "invoices-e2e": "apps/invoices-e2e",
     "orders": "apps/orders",
     "orders-domain": "libs/orders/domain",
     "orders-e2e": "apps/orders-e2e"
