--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@nx-ddd-demo/invoices/domain": ["libs/invoices/domain/src/index.ts"],
       "@nx-ddd-demo/orders/domain": ["libs/orders/domain/src/index.ts"]
     }
   },
