--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,10 @@
     "baseUrl": ".",
     "paths": {
       "@nx-ddd-demo/invoices/domain": ["libs/invoices/domain/src/index.ts"],
-      "@nx-ddd-demo/orders/domain": ["libs/orders/domain/src/index.ts"]
+      "@nx-ddd-demo/orders/domain": ["libs/orders/domain/src/index.ts"],
+      "@nx-ddd-demo/orders/feature-manage-orders": [
+        "libs/orders/feature-manage-orders/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
