--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "@nx-ddd-demo/invoices/domain": ["libs/invoices/domain/src/index.ts"],
+      "@nx-ddd-demo/invoices/feature-manage-invoices": [
+        "libs/invoices/feature-manage-invoices/src/index.ts"
+      ],
       "@nx-ddd-demo/orders/domain": ["libs/orders/domain/src/index.ts"],
       "@nx-ddd-demo/orders/feature-manage-orders": [
         "libs/orders/feature-manage-orders/src/index.ts"
