Добавлен util модуль
ng g @angular-architects/ddd:util --name="core" --shared

--- a/angular.json
+++ b/angular.json
@@ -11,6 +11,7 @@
     "orders-domain": "libs/orders/domain",
     "orders-e2e": "apps/orders-e2e",
     "orders-feature-manage-orders": "libs/orders/feature-manage-orders",
-    "shared-ui-components": "libs/shared/ui-components"
+    "shared-ui-components": "libs/shared/ui-components",
+    "shared-util-core": "libs/shared/util-core"
   }
 }
